--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>cn.humorchen</groupId>
     <artifactId>LocalCache</artifactId>
     <version>1.0.1-RELEASE</version>
     <name>LocalCache</name>
     <description>
-        一个线程安全、异步加载缓存的缓存工具，基于caffeine
+        一个线程、内存安全、自动异步加载缓存、命中率等状态监控的本地缓存，基于caffeine二次封装
     </description>
     <properties>
         <java.version>1.8</java.version>
@@ -20,23 +20,36 @@
         <aspectjweaver.version>1.9.5</aspectjweaver.version>
         <hutool.version>5.7.13</hutool.version>
     </properties>
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>https://github.com/HumorChen/LocalCache/blob/master/LICENSE</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <scm>
+        <tag>master</tag>
+        <url>https://github.com/HumorChen/LocalCache</url>
+        <connection>scm:git:git@github.com:HumorChen/LocalCache.git</connection>
+        <developerConnection>scm:git:git@github.com:HumorChen/LocalCache.git</developerConnection>
+    </scm>
+    <developers>
+        <developer>
+            <name>humorchen</name>
+            <email>humorchen99@gmail.com</email>
+            <organization>humorchen</organization>
+        </developer>
+    </developers>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <version>2.2.3.RELEASE</version>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
-        <!--        spring-boot-starters-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starters</artifactId>
-            <version>2.2.3.RELEASE</version>
-        </dependency>
-        <!--        springframework-->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>5.2.3.RELEASE</version>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
         <!--        hutool-->
         <dependency>
@@ -74,8 +87,24 @@
             <artifactId>aspectjweaver</artifactId>
             <version>${aspectjweaver.version}</version>
         </dependency>
+        <!--        junit-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
@@ -87,8 +116,24 @@
                     <source>1.8</source>
                     <target>1.8</target>
                     <encoding>UTF-8</encoding>
-                    <skipTests>true</skipTests>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
+                <configuration>
+                    <mainClass>com.example.demo.DemoApplication</mainClass>
+                    <skip>true</skip>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>repackage</id>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
