--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <name>LocalCache</name>
     <version>1.0.0-RELEASE</version>
     <description>
-        一个安全好用的springboot项目本地方法缓存，基于最高效的caffeine框架。
+         一个安全好用的springboot项目注解可配式本地方法缓存，基于最高效的caffeine框架。
     </description>
     <properties>
         <java.version>1.8</java.version>
